# ABQ-UMAT-Sanisand-High

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  abaqus_v6.env  fprettify.cfg
cmake/: Dependencies.cmake  abaqus_v6.env.in  config.h.in
cmake/modules/: FindABAQUS.cmake  FindGoogleTest.cmake  FindLibTorch.cmake  FindMKL.cmake  FindMimalloc.cmake
input/: drained.inp
scripts/: compression_model.py  merge_cpp.bat  umat.bat
src/cpp/: CMakeLists.txt
src/cpp/core/: CMakeLists.txt  ShareVar.cpp  ShareVar.h  ShareVarOptions.h  StateVar.cpp  StateVar.h  StressTensor.cpp  StressTensor.h  TensorOptions.h  auxiliary.cpp  auxiliary.h
src/cpp/core/impl/: CMakeLists.txt  ScopeGuard.h  ShareVarImpl.cpp  ShareVarImpl.h  StateVarImpl.cpp  StateVarImpl.h  TensorOptions_ops.cpp  TensorOptions_ops.h
src/cpp/ops/: Elastic.h  Elastic_ops.cpp  Elastic_ops.h  drift.cpp  drift.h
src/cpp/umat/: UmatImpl.cpp  UmatImpl.h  math.cpp  math.h
src/cpp/utils/: TypeMap.h  Visit.hpp  base_config.h  concept.h  config.h  export.h  material_config.h
src/fortran/: CMakeLists.txt
src/fortran/core/: container.f90  container_impl.f90  elastic.f90  elastic_impl.f90  macro.h  math.f90  math_impl.f90  plastic.f90  plastic_impl.f90
src/fortran/umat/: CppToFortran.f90  macro.h  umatImpl.f90
src/fortran/utils/: base_config.f90  exception.f90  exception_impl.f90  macro.h  material_config.f90  preprocess.f90  tensor_opt.f90  tensor_opt_impl.f90
src/interface/: umat.f90
